examples/diagnostics/expected/1242-diagnostics-intrinsic-wrong-module.stderr
error: intrinsic 'size_of' is declared by modules/std/core.sx, not by this module
  --> examples/diagnostics/1242-diagnostics-intrinsic-wrong-module.sx:9:1
   |
 9 | size_of :: ($T: Type) -> i64 intrinsic;
   | ^^^^^^^
